@@ -55,7 +55,7 @@
 \newcommand{\rubric}[1]{\subsection*{~\hfill {\it #1} \hfill ~}}
 \newcommand{\titlereference}[1]{\textsl{#1}}
 % end of "some commands"
-\title{Title}
+\title{}
 \author{Foo Fred~\\
 Food Foomatics {\&} Friends~\\
 foo@food.example.info~\\
@@ -66,8 +66,8 @@ Bar-BQ Bar~\\
 1-800-BARBQBAR~\\
 Barbara St 16~\\
 South Barwell}
+\date{}
 \hypersetup{
-pdftitle={Title},
 pdfauthor={Foo Fred;Bar Barney}
 }
 \raggedbottom
